Se cambia la configuracion de WEB-INF al classpath y se insertan test integrados. Ademas se añaden las librerias de log4j y se configura correctamente el logado